Add member for building done and some some code optimized

--- a/KGERP/Views/BillRequisition/AddNewMember.cshtml
+++ b/KGERP/Views/BillRequisition/AddNewMember.cshtml
@@ -1,6 +1,6 @@
 ﻿@model KGERP.Service.ServiceModel.BuildingMemberModel
 @{
-    ViewData["Title"] = "New Floor";
+    ViewData["Title"] = "New Member";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,12 +12,12 @@
 <section class="content-header">
     <h1>
         <span>
-            New Floor
+            New Member
         </span>
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">New Floor</li>
+        <li class="active">New Member</li>
     </ol>
 </section>
 
@@ -68,7 +68,7 @@
                                         <thead>
                                             <tr>
                                                 <th>SL</th>
-                                                <th>Floor Name</th>
+                                                <th>Member Name</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
@@ -122,7 +122,7 @@
                     <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
                         &times;
                     </button>
-                    <h5 class="modal-title"><b>Floor Delete</b></h5>
+                    <h5 class="modal-title"><b>Member Delete</b></h5>
                 </div>
 
                 <div class="modal-body">
